<resources>
    <string name="app_name">OneBook</string>
    <string name="title_activity_main">OneBook</string>
    <string name="title_activity_searching_main">Searching</string>
    <string name="title_activity_borrowing_main">Borrowing</string>
    <string name="title_activity_lending_main">Lending</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User\'s Name</string>
    <string name="nav_header_subtitle">users@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Quick scan</string>
    <string name="title_activity_my_accnt_activity">MyAccnt_activity</string>
    <string name="EditUserButton">Edit user information</string>
    <string name="title_activity_edit_user_activity">EditUserActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="phone">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="new_password">New Password:</string>
    <string name="request">Request</string>
    <string name="book_title_example">This is a book title</string>
    <string name="author_example">Author Name</string>
    <string name="status_example">Available</string>
    <string name="owner_example">Owner Name</string>
    <string name="user_pic">User Profile Picture</string>
    <string name="keyword">Search Keywords</string>
    <string name="Search">Search</string>
    <string name="set_location">Set Pick-up Location</string>
    <string name="ISBN">ISBN</string>
    <string name="Description">Description</string>
    <string name="Requests_on_Books">Requests on the book</string>
    <string name="edit">Edit</string>
    <string name="title_activity_add">Add Book</string>
    <string name="author">Author</string>
    <string name="book_name">Name</string>
    <string name="descr">Description</string>
    <string name="add">Add</string>
    <string name="sbn">ISBN</string>
    <string name="channel_name">OneBook Notifications</string>
    <string name="channel_description">General notifications.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

</resources>
